# meeting-copilot

./: .gitignore  Cargo.toml  DESIGN.md  README.md  package-lock.json  package.json
cli/: meeting-copilot.mjs
docs/: DECISIONS.md  desktop-shell.md  implementation-understanding.md  native-audio-stt.md  uiux-research.md
fixtures/: customer_interview_en.json  index.json  mixed_false_positive.json  mixed_scope_owner.json  requirement_scoping_layer3.json  zh_decision_readiness.json
scripts/: build-native-helpers.mjs  build.mjs  install-mac-helper-app.mjs  migrate.mjs  run-with-rust.mjs  serve.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands_audio.inc.rs  commands_audio.rs  commands_core.inc.rs  commands_core.rs  decision_logic.inc.rs  decision_logic.rs  desktop_types.inc.rs  desktop_types.rs  local_stt.rs  macos_speech_bridge.inc.rs  macos_speech_bridge.rs  main.rs  native_storage.inc.rs  native_storage.rs  oauth_provider.inc.rs  oauth_provider.rs  shell_storage.inc.rs  shell_storage.rs  tests.inc.rs  tests.rs
tests/: audio-capture.test.mjs  brief-builder.test.mjs  document-exports.test.mjs  domain.test.mjs  extraction.test.mjs  live-ai-policy.test.mjs  live-api.test.mjs  live-session.test.mjs  native-shell.test.mjs  native-stt.test.mjs  partial-transcript-policy.test.mjs  platform-shell.test.mjs  provider.test.mjs  replay.test.mjs  setup-controller.test.mjs  storage.test.mjs  stt-bakeoff.test.mjs  transcript-drawer.test.mjs  transcript-state.test.mjs  (+1 more)
(+44 files in other folders)
