[package]
name = "meeting-copilot-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
meeting-copilot-core = { path = "../crates/meeting-copilot-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
sha2 = "0.10"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
unicode-segmentation = "1.13"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSColor", "NSWindow", "objc2-core-foundation"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
